ssh workflow 테스트 error 수정

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -29,7 +29,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-#      - uses: actions/checkout@v3.3.0
+      - uses: actions/checkout@v3.3.0
 
       - name: execute remote ssh
         uses: appleboy/ssh-action@master
