--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -19,7 +19,7 @@ jobs:
       with:
         java-version: '17'
         distribution: 'temurin'
-        
+
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
 
@@ -42,8 +42,7 @@ jobs:
             whoami
             cd /home/ubuntu/workspace/cicd-test
             git pull
-            touch .env
-            echo "${{ secrets.CAKE }}" > .env
+            export cake=${{ secrets.cake }}
             ./gradlew build
             cd build/libs
-            nohub java -jar *SNAPSHOT.jar
+            nohup java -jar *SNAPSHOT.jar > app.log 2>&1 &
