--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -66,10 +66,11 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/cicd-test
+          tags: ${{ secrets.DOCKER_USERNAME }}/cicd-test:latest
 
   deploy:
     runs-on: ubuntu-latest
+    needs: test
     steps:
       - uses: actions/checkout@v3.3.0
 
