--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -66,7 +66,7 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/cicd-test:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/cicd-test:latest
 
   deploy:
     runs-on: ubuntu-latest
