도커 허브 업로드 자동화 error 수정

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,4 +1,4 @@
-name: Java CI with Gradle
+name: Java CI/CD with Gradle
 
 on:
   push:
@@ -45,11 +45,23 @@ jobs:
     - name: Build with Gradle Wrapper
       run: ./gradlew build
 
+    - name: Upload Build Artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: build-artifact
+        path: build/libs/*SNAPSHOT.jar
+
   docker-image-upload:
     runs-on: ubuntu-latest
     needs: build
     steps:
       - uses: actions/checkout@v3.3.0
+
+      - name: Download Build Artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: build-artifact
+          path: .
 
       - name: login to docker hub
         uses: docker/login-action@v2
